# pluggy

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG  CHANGELOG.rst  CLAUDE.md  HOWTORELEASE.rst  LICENSE  MANIFEST.in  README.rst  RELEASING.rst  appveyor.yml  mypy.ini  pluggy.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_pluggy.py  tox.ini
.claude/: settings.json
.github/workflows/: deploy.yml  downstream.yml  main.yml  prepare-release.yml  test.yml
changelog/: 110.bugfix.rst  116.removal.rst  117.trivial.rst  120.removal.rst  122.feature.rst  123.doc.rst  131.feature.rst  136.doc.rst  13750(pytest).bugfix.rst  138.feature.rst  153.trivial.rst  155.removal.rst  156.trivial.rst  160.bugfix.rst  165.trivial.rst  166.trivial.rst  172.trivial.rst  174.feature.rst  177.feature.rst  178.feature.rst  186.doc.rst  187.bugfix.rst  189.feature.rst  205.bugfix.rst  209.trivial.rst  215.feature.rst  244.bugfix.rst  260.feature.rst  265.removal.rst  267.removal.rst  272.removal.rst  282.feature.rst  308.removal.rst  309.feature.rst  313.removal.rst  394.feature.rst  405.feature.rst  426.removal.rst  428.feature.rst  431.bugfix.rst  (+24 more)
changelog.d/: 186.doc.rst  522.doc.rst
design/: 01-module-reorganization.md  02-configuration-objects.md  03-markers-attach-config.md  04-hookimpl-wrapper-types.md  05-hookcaller-and-execution.md  06-project-spec.md  07-async-submitter.md  DECISIONS.md  README.md
docs/: api_reference.rst  calling.rst  conf.py  define.rst  index.rst  manage.rst
docs/examples/: firstexample.py  toy-example.py
docs/examples/eggsample/: setup.py
docs/examples/eggsample-spam/: eggsample_spam.py  setup.py
docs/examples/eggsample/eggsample/: __init__.py  hookspecs.py  host.py  lib.py
downstream/: .gitignore  README.md  pytest.sh  python-lsp-server.sh  run_downstream.py
downstream/recipes/: conda.bash  conda.toml  datasette.toml  devpi.toml  hatch.toml  pytest.toml  python-lsp-server.toml  tox.toml
pluggy/: __init__.py  _tracing.py  callers.py  hooks.py  manager.py  parse_funcs.py  pluginmanager.py
pluggy/callers/: __init__.py  legacy.py  utils.py
scripts/: compute_version.py  release.py  towncrier-draft-to-file.py
src/ln_pluggy/: _callers.py  _hooks.py  _manager.py  _result.py  _warnings.py
src/pluggy/: __init__.py  _async.py  _caller.py  _callers.py  _compat.py  _config.py  _decorators.py  _entrypoints.py  _errors.py  _exceptions.py  _execution.py  _hook_callers.py  _hook_config.py  _hook_markers.py  _hookrelay.py  _hooks.py  _implementation.py  _importlib.py  _importlib_metadata.py  _inspect.py  _manager.py  _project.py  _pytest_compat.py  _result.py  _tracing.py  _types.py  _typing.py  callers.py  hooks.py  manager.py
src/pluggy/callers/: __init__.py  cythonized.pyx
testing/: benchmark.py  conftest.py  test_async.py  test_configuration.py  test_deprecations.py  test_details.py  test_helpers.py  test_hookcaller.py  test_hookrelay.py  test_implementation.py  test_invocations.py  test_method_ordering.py  test_multicall.py  test_pluggy.py  test_pluginmanager.py  test_project_spec.py  test_result.py  test_tracer.py  test_warnings.py
