[metadata]
name = ln_pluggy
description = plugin and hook calling mechanisms for python
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
platforms = unix, linux, osx, win32
author = SunDay
author_email = sunday.zhuozhou@outlook.com
url = https://github.com/SundayZhuozhou/ln_pluggy
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    ln_pluggy
python_requires = >=3.8
package_dir =
    =src
setup_requires =
    setuptools-scm
[options.extras_require]
dev =
    pre-commit
    tox
testing =
    pytest
    pytest-benchmark
[options.package_data]
ln_pluggy = py.typed

[devpi:upload]
formats=sdist.tgz,bdist_wheel
